create an empty test job during the test
*Jenkins_job test will create an empty job instead of
using existing job it will decrease the time of testing
*OpenLDAP test will use cvp-sanity job to check the user

Change-Id: Id7277ad08d62d93afd4b1617a5cbf02d81f580b6
Related-PROD: PROD-25339

--- a/cvp_checks/global_config.yaml
+++ b/cvp_checks/global_config.yaml
@@ -69,7 +69,8 @@ test_mtu:
 drivetrain_version: ''
 
 # jenkins job to run during the test
-jenkins_test_job: 'git-mirror-downstream-mk-pipelines'
+jenkins_test_job: 'DT-test-job'
+jenkins_cvp_job: 'cvp-sanity'
 
 # ntp test setting
 # this test may skip specific node (use fqdn)
