Add ntp_skipped_nodes parameter, do not compare time on nodes with salt master
Related-PROD: PROD-28322
Related-PROD: PROD-27182

Change-Id: Id8247d0b28301d098569f2ae3bd08ff7cfcad154

--- a/cvp-sanity/cvp_checks/global_config.yaml
+++ b/cvp-sanity/cvp_checks/global_config.yaml
@@ -74,6 +74,4 @@ jenkins_cvp_job: 'cvp-sanity'
 
 # ntp test setting
 # this test may skip specific node (use fqdn)
-test_ntp_sync:
-  { #"skipped_nodes": [""],
-    "time_deviation": 1}
+ntp_skipped_nodes: [""]
