[CVP] Add ext_net parameter
Change-Id: Ie0d80d86b6d527f5593b9525cf22bc8343b84839
Related-PROD: PROD-26972

--- a/test_set/cvp-spt/global_config.yaml
+++ b/test_set/cvp-spt/global_config.yaml
@@ -23,6 +23,7 @@ image_name: "Ubuntu"
 skipped_nodes: []
 # example for Jenkins: networks=net1,net2
 networks: "10.101.0.0/24"
+external_network: ''
 HW_NODES: []
 CMP_HOSTS: []
 nova_timeout: 30
