[CVP] Skip all not relevant interfaces in test_mtu
Change-Id: I14ff6913077c03ae1211ddabf4d1fa0223073a0f
Related-PROD: PROD-27217
(cherry picked from commit 674bd1328cd08c1e2a2e66f057e71c7e5d45e2f4)

--- a/test_set/cvp-sanity/global_config.yaml
+++ b/test_set/cvp-sanity/global_config.yaml
@@ -62,7 +62,8 @@ groups: {
 # this test may skip groups (see example)
 test_mtu:
   { #"skipped_groups": ["dbs"]
-    "skipped_ifaces": ["bonding_masters", "lo", "veth", "tap", "cali", "qv", "qb", "br-int", "vxlan"]}
+    "skipped_ifaces": ["bonding_masters", "lo", "veth", "tap", "cali", "qv", "qb", "br-int",
+                       "vxlan", "virbr0", "virbr0-nic", "docker0", "o-hm0"]}
 # mask for interfaces to skip
 
 # test duplicate ips
