[CVP][Sanity] Added vnet interfaces to skip list for MTU
It is not valid to compare vnet interfaces' MTU on KVM nodes
by name.

Change-Id: I62edb6339d8ab37031d6f3e75e5acf348b9a406b
Related-PROD: PROD-30698

--- a/test_set/cvp-sanity/global_config.yaml
+++ b/test_set/cvp-sanity/global_config.yaml
@@ -63,7 +63,7 @@ groups: {
 test_mtu:
   { #"skipped_groups": ["dbs"]
     "skipped_ifaces": ["bonding_masters", "lo", "veth", "tap", "cali", "qv", "qb", "br-int",
-                       "vxlan", "virbr0", "virbr0-nic", "docker0", "o-hm0"]}
+                       "vxlan", "virbr0", "virbr0-nic", "docker0", "o-hm0", "vnet"]}
 # mask for interfaces to skip
 
 # test duplicate ips
