Make Python style traceback as the default one
pytest style of traceback adds additional symbols,
which supposedly makes it prettier to look, but
prevents from parsing easily data collections
(e.g. dicts).
Python style of traceback helps to resolve the issue.

Change-Id: I682a61d74092978cab4f9146c6b8260b20dc0b3e
Related-PROD: #PROD-23832
(cherry picked from commit 90076a301b9a319733482026da7df2bca0b0a0e9)

--- a/test_set/cvp-sanity/pytest.ini
+++ b/test_set/cvp-sanity/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 norecursedirs = venv*
-addopts = -vv --tb=short
+addopts = -vv --tb=native
 
 log_level=WARNING
 log_format = '%(message)s'
