[SPT] Added downloaded iperf package for vm2vm test
Added possibility to execute vm2vm test in case if
the OpenStack instances have no Internet to install
iperf packages from Internet using apt.
In case if there is no Internet, the deb package is
already dwnloaded and present inside the Docker image.
When VM is ready, the iperf package is transported to
it and installed.
The possibility is configured with 'internet_at_vms'
string option that is 'true' by default.

Change-Id: I45c47f9691f484340e7f4a9decc584dcedb63b6c
Related-PROD: #PROD-32023

--- a/test_set/cvp-spt/global_config.yaml
+++ b/test_set/cvp-spt/global_config.yaml
@@ -19,19 +19,21 @@ SALT_PASSWORD: <PASSWORD>
 # How many seconds to wait for salt-minion to respond
 salt_timeout: 1
 
-image_name: "Ubuntu"
 skipped_nodes: []
 # example for Jenkins: networks=net1,net2
 networks: "10.101.0.0/24"
-external_network: ''
 HW_NODES: []
 CMP_HOSTS: []
-nova_timeout: 90
-iperf_prep_string: "sudo /bin/bash -c 'echo \"91.189.88.161        archive.ubuntu.com\" >> /etc/hosts'"
 IMAGE_SIZE_MB: 2000
 
 # parameters for vm2vm test
+image_name: "Ubuntu"
 flavor_name: 'spt-test'
 flavor_ram: 1536
 flavor_vcpus: 1
 flavor_disk: 5
+nova_timeout: 90
+external_network: ''
+iperf_prep_string: "sudo /bin/bash -c 'echo \"91.189.88.161        archive.ubuntu.com\" >> /etc/hosts'"
+# whether Internet is present at OpenStack VMs and iperf can be installed with apt
+internet_at_vms: 'true'
