Permit little time diff in test_ntp_sync
Related-prod: PROD-34238
Change-Id: I854ae9a9c0a080dea6d06f4deb6b4dc1edc5e86d
(cherry picked from commit aa4f93968974cc21903971016d532239d1416e06)

--- a/test_set/cvp-sanity/global_config.yaml
+++ b/test_set/cvp-sanity/global_config.yaml
@@ -106,6 +106,10 @@ jenkins_cvp_job: 'cvp-sanity'
 # this test may skip specific node (use fqdn)
 ntp_skipped_nodes: []
 
+# Maximum time diff for nodes
+# Need for case if test test_ntp_sync is running on the border between seconds
+maximum_time_diff: 1
+
 # packages need to skip in
 # test_check_package_versions
 skipped_packages: []
