--- a/test_set/cvp-spt/requirements.txt
+++ b/test_set/cvp-spt/requirements.txt
@@ -1,10 +1,10 @@
-paramiko>=2.0.9 # LGPLv2.1+
-pytest>=3.0.4  # MIT
-python-cinderclient>=1.6.0,!=1.7.0,!=1.7.1  # Apache-2.0
-python-glanceclient>=2.5.0  # Apache-2.0
-python-keystoneclient>=3.8.0  # Apache-2.0
-python-neutronclient>=5.1.0  # Apache-2.0
+requests==2.24.0 # LGPLv2.1+
+pytest==4.6.11 # MIT
+python-cinderclient==6.0.0 # Apache-2.0
+python-glanceclient==3.0.0  # Apache-2.0
+python-keystoneclient==3.22.0  # Apache-2.0
+python-neutronclient==7.1.0 # Apache-2.0
 python-novaclient==7.1.0
-PyYAML>=3.12  # MIT
-requests>=2.20.0 # Apache-2.0
+PyYAML==5.3.1  # MIT
+requests==2.24.0 # Apache-2.0
 texttable==1.2.0
