Add lost paramiko package to the requirements.txt for cvp-spt
PROD-35990

Change-Id: I74780a7092f9512919e457d6ba3131f1c9a6d9ad

--- a/test_set/cvp-spt/requirements.txt
+++ b/test_set/cvp-spt/requirements.txt
@@ -1,4 +1,4 @@
-requests==2.24.0 # LGPLv2.1+
+paramiko==2.7.2 # LGPLv2.1+
 pytest==4.6.11 # MIT
 python-cinderclient==6.0.0 # Apache-2.0
 python-glanceclient==3.0.0  # Apache-2.0
