--- a/test_set/cvp-sanity/requirements.txt
+++ b/test_set/cvp-sanity/requirements.txt
@@ -1,10 +1,10 @@
-pytest==3.10
-pytest-rerunfailures==7.0
-requests==2.24.0
-flake8==3.8.3
-PyYAML==5.3.1
-python-jenkins==1.7.0
-pygerrit2==2.0.9
-GitPython==3.1.7
-ldap3==2.7
+pytest>=3.10
+pytest-rerunfailures>=7.0
+requests>=2.24.0
+flake8>=3.8.3
+PyYAML>=5.4
+python-jenkins>=1.7.0
+pygerrit2>=2.0.9
+GitPython>=3.1.7
+ldap3>=2.7
 
