--- a/test_set/cvp-spt/requirements.txt
+++ b/test_set/cvp-spt/requirements.txt
@@ -5,6 +5,6 @@ python-glanceclient==3.0.0  # Apache-2.0
 python-keystoneclient==3.22.0  # Apache-2.0
 python-neutronclient==7.1.0 # Apache-2.0
 python-novaclient==7.1.0
-PyYAML==5.3.1  # MIT
+PyYAML>=5.4  # MIT
 requests==2.24.0 # Apache-2.0
 texttable==1.2.0
