Fix warnings from pytest
PROD-36256

Change-Id: Ic0af4f208681ca3cc92ef8a29cc2305036123230

--- a/test_set/cvp-sanity/pytest.ini
+++ b/test_set/cvp-sanity/pytest.ini
@@ -1,6 +1,12 @@
 [pytest]
 norecursedirs = venv*
 addopts = -vv --tb=native
+markers =
+      full
+      smoke
+      sl_dup
 
 log_level=WARNING
 log_format = '%(message)s'
+filterwarnings =
+      ignore::DeprecationWarning
