--- a/test_set/cvp-spt/requirements.txt
+++ b/test_set/cvp-spt/requirements.txt
@@ -1,5 +1,6 @@
 paramiko==2.7.2 # LGPLv2.1+
 pytest==4.6.11 # MIT
+msgpack==1.0.3
 python-cinderclient==6.0.0 # Apache-2.0
 python-glanceclient==3.0.0  # Apache-2.0
 python-keystoneclient==3.22.0  # Apache-2.0
