Fix CVE PROD-37203
Change-Id: Iae0eaf540e6333196a8048361932368ccbcc68df

--- a/test_set/tox.ini
+++ b/test_set/tox.ini
@@ -1,27 +1,40 @@
 [tox]
 envlist = cvp-sanity,cvp-spt,cvp-stacklight
 skipsdist = TRUE
-deps = pip==20.0.2
-       virtualenv==20.21.0
-       setuptools
-       wheel
 
 [testenv]
 passenv = *
 commands = {posargs:pytest --version}
+download = true
+deps3 =
+       pip==21.1
+       virtualenv==20.21
+       setuptools==65.5.1
+       wheel==0.38.0
+deps27 =
+       pip==20.3.4
+       virtualenv==20.15.1
+       setuptools==44.1.1
+       wheel==0.37.1
 
 [testenv:cvp-sanity]
 basepython = python3.8
-deps = -rcvp-sanity/requirements.txt
+deps =
+       {[testenv]deps3}
+       -rcvp-sanity/requirements.txt
 changedir = cvp-sanity
 
 [testenv:cvp-spt]
 basepython=python2.7
-deps = -rcvp-spt/requirements.txt
+deps =
+       {[testenv]deps27}
+       -rcvp-spt/requirements.txt
 changedir = cvp-spt
 
 [testenv:cvp-stacklight]
 basepython=python2.7
 install_command = python -m pip install cvp-stacklight/ {packages}
-deps = -rcvp-stacklight/requirements.txt
+deps =
+       {[testenv]deps27}
+       -rcvp-stacklight/requirements.txt
 changedir = cvp-stacklight
